# excellent-rusty-patches

./: .gitignore  Excellent.spec  README.md  backend.py  fromqr.py  frontend-sidebar.py  frontend-topbar.py  frontend.py  imports.py  invoices.py  locales.py  toexcel.py  topdf.py
Database/: exchange_rates.db  gelir.db  genel_gider.db  gider.db  history.db  settings.db
rust_db/: Cargo.toml  pyproject.toml
rust_db/rust_db/: __init__.py
rust_db/src/: lib.rs
rust_qr/rust_qr_backend/: __init__.py
rust_qr/src/: lib.rs
