[package]
name = "rust_db"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_db"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
